variables.Variables.scala.error
Erreur de compilation :
Variables:10: error: Int does not take parameters
  dejaFait();
          ^